# tealer

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  cfg.dot  mypy.ini  pyproject.toml  setup.py
.github/workflows/: darglint.yml  linter.yml  parser.yml  pip-audit.yml  publish.yml  pytest.yml  pytest310.yml  tests.yml
examples/printers/: call-graph.dot  call-graph.py  call-graph.teal  cfg.py  cfg.teal  cfg_full_cfg.dot  human-summary.py  human-summary.teal  subroutine-cfg.py  subroutine-cfg.teal  subroutine-cfg_contract_shortened_cfg.dot  subroutine-cfg_foobar_cfg.dot  transaction-context.dot  transaction-context.py  transaction-context.teal
plugin_example/: README.md
plugin_example/rekey_plugin/: setup.py
plugin_example/template/: setup.py
script/: test_algorand_contracts.sh
scripts/: test_algorand_contracts.sh
teal_analyzer/: __main__.py
teal_analyzer/detectors/: abstract_detector.py  groupsize.py  rekeyto.py
teal_analyzer/printers/: abstract_printer.py  can_delete.py  can_update.py
teal_analyzer/teal/: basic_blocks.py  global_field.py  instructions.py  parse_global_field.py  parse_instruction.py  parse_teal.py  parse_transaction_field.py  teal.py  transaction_field.py
tealer/: __init__.py  __main__.py  exceptions.py  tealer.py
tealer/detectors/: abstract_detector.py  all_detectors.py  anyone_can_delete.py  anyone_can_update.py  can_close_account.py  can_close_asset.py  can_delete.py  can_update.py  fee_check.py  groupsize.py  is_deletable.py  is_updatable.py  rekeyto.py  utils.py
tealer/execution_context/: transactions.py
tealer/group_config/: group_config.py
tealer/printers/: __init__.py  abstract_printer.py  all_printers.py  call_graph.py  can_delete.py  can_update.py  full_cfg.py  function_cfg.py  human_summary.py  transaction_context.py
tealer/teal/: __init__.py  basic_blocks.py  functions.py  global_field.py  instructions.py  parse_functions.py  parse_global_field.py  parse_instruction.py  parse_teal.py  parse_transaction_field.py  subroutine.py  teal.py  (+1 more)
tests/: test_cfg.py  test_detectors.py  test_detectors_using_pyteal.py  test_mode_detector.py  test_parsing.py  test_parsing_using_pyteal.py  test_regex.py  test_string_representation.py  test_subroutine_identification.py  test_versions.py  utils.py
(+151 files in other folders)
